[package]
name = "ident_concat"
version = "0.2.3"
edition = "2021"
repository = "https://github.com/tudbut/ident-concat"
description = "Concatenates identifiers."
license = "WTFPL"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
